# Datus-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  install-dev.sh  install.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/workflows/: code-quality.yml  deploy-docs.yml  python-format-check.yml  run-coverage.yml  run-integration-skill.yml  run-nightly.yml  run-ut-and-coverage.yml  run-ut.yml
benchmark/scripts/: README.md  evaluation.py  gen_benchmark.py  gen_exec_result.py  gen_multi_benchmark.py  llm_recall.py  schema_recall_bird.py  schema_recall_spider2.py  select_answer.py  selection_results_report.py
build_scripts/: Dockerfile.bak.first  build_test_data.sh
ci/: audit_tests.py  post-audit-comment.js  post-coverage-comment.js  prepare_docs_build.py  preview-comment.py  run-pr-tests.py  run-tests-and-coverage.py
conf/: agent.yml.example  providers.yml
datus/: __init__.py  main.py  mcp_server.py  multi_round_benchmark.py
datus/agent/: agent.py  plan.py  reflect.py  workflow.py  workflow_runner.py
datus/api/: README.md  auth.py  deps.py  legacy_auth.py  legacy_models.py  main.py  server.py  service.py
datus/auth/: claude_credential.py
datus/claw/: bridge.py  configure.py  main.py
datus/cli/: README.md  _cli_utils.py  _render_utils.py  action_history_display.py  agent_commands.py  autocomplete.py  background_sync.py  bi_dashboard.py  chat_commands.py  cli_styles.py  context_commands.py  datasource_app.py  datasource_commands.py  datasource_manager.py  effort_app.py  effort_commands.py  execution_state.py  generation_hooks.py  init_util.py  init_workspace.py  interactive_configure.py  interactive_init.py  language_app.py  language_commands.py  list_selector_app.py  main.py  mcp_app.py  mcp_commands.py  metadata_commands.py  model_app.py  model_commands.py  namespace_manager.py  plan_hooks.py  print_mode.py  project_init.py  provider_auth_flows.py  provider_model_catalog.py  repl.py  service_client.py  service_commands.py  (+9 more)
datus/configuration/: README.md  agent_config.py  agent_config_loader.py  config_migrator.py  node_type.py  project_config.py
datus/gateway/: bridge.py  commands.py  configure.py  formatters.py  main.py  models.py  runtime.py
datus/models/: base.py  claude_model.py  codex_model.py  litellm_adapter.py  mcp_result_extractors.py  openai_compatible.py  sdk_patches.py  session_manager.py
datus/prompts/: compare_sql.py  compare_sql_with_mcp.py  fix_sql.py  gen_sql.py  output_checking.py  prompt_manager.py  reasoning_sql_with_mcp.py  reflection.py  schema_lineage.py  selection.py
datus/schemas/: agent_models.py  base.py  explore_agentic_node_models.py  ext_knowledge_agentic_node_models.py  gen_dashboard_agentic_node_models.py  gen_sql_agentic_node_models.py  node_models.py  scheduler_agentic_node_models.py  schema_linking_node_models.py  semantic_agentic_node_models.py  visualization.py
datus/storage/: base.py  cache.py  catalog_manager.py  embedding_models.py  fastembed_embeddings.py  scoped_filter.py  sub_agent_kb_bootstrap.py  subject_manager.py
datus/utils/: benchmark_utils.py  constants.py  csv_utils.py  exceptions.py  json_utils.py  loggings.py  mcp_decorators.py  memory_loader.py  node_utils.py  path_manager.py  rich_util.py  sql_utils.py  stream_output.py  sub_agent_manager.py  typing_fix.py
datus/validation/: __init__.py  builtin_checks.py  exceptions.py  hook.py  llm_runner.py  report.py  target_extractor.py
dev/: 404.html  CNAME  index.html  sitemap.xml
dev/assets/: examples-values.yaml
dev/cli-commands/: index.html
dev/develop/: index.html
dev/release_notes/: index.html
dev/release_notes_0.2.7_zh/: index.html
dev/search/: search_index.json
dev/stylesheets/: extra.css
dev/zh/: index.html
docs/: cli-commands.md  index.md  index.zh.md  release_notes.md  release_notes_0.2.7_zh.md
docs/API/: chat.md  chat.zh.md  deployment.md  deployment.zh.md  introduction.md  introduction.zh.md  knowledge_base.md  knowledge_base.zh.md  models.md
docs/adapters/: bi_adapters.md  bi_adapters.zh.md  db_adapters.md  db_adapters.zh.md  semantic_adapters.md  semantic_adapters.zh.md
docs/benchmark/: benchmark_manual.md  benchmark_manual.zh.md
docs/claw/: introduction.md  introduction.zh.md
docs/cli/: chat_command.md  chat_command.zh.md  context_command.md  context_command.zh.md  introduction.md  introduction.zh.md  mcp_extensions.md  mcp_extensions.zh.md  model_command.md  model_command.zh.md  reference.md  reference.zh.md  skill_command.md  skill_command.zh.md  sql_execution.md  sql_execution.zh.md
docs/configuration/: agent.md  agent.zh.md  benchmark.md  bi_platforms.md  datasources.md  datasources.zh.md  introduction.md  introduction.zh.md  namespace.md  nodes.zh.md  semantic_layer.md  semantic_layer.zh.md  storage.md  storage.zh.md
docs/design/: de-skills-design-summary.md
docs/develop/: 0.2.7_pre_release_test_plan.md  README.md  feedback_agent_workflow.md
docs/gateway/: feishu.md  feishu.zh.md  introduction.md  introduction.zh.md  slack.md  slack.zh.md
docs/getting_started/: Datus_tutorial.md  Datus_tutorial.zh.md  Quickstart.md  Quickstart.zh.md  contextual_data_engineering.md  contextual_data_engineering.zh.md  dashboard_copilot.md  dashboard_copilot.zh.md  data_engineering_quickstart.md  data_engineering_quickstart.zh.md
docs/integration/: mcp.md  mcp.zh.md  memory.md  memory.zh.md  skills.md  skills.zh.md
docs/knowledge_base/: ext_knowledge.md  ext_knowledge.zh.md  introduction.md  introduction.zh.md  metadata.md  metadata.zh.md  metrics.md  metrics.zh.md  platform_doc.md  platform_doc.zh.md  reference_sql.md  reference_sql.zh.md  reference_template.md  reference_template.zh.md  semantic_model.md  semantic_model.zh.md
docs/subagent/: builtin_subagents.md  (+21 more)
scripts/: spark_pi.py
tests/: conftest.py  nightly_requirements.py  test_connector_sqlite.py  test_init_util.py  test_namespace_manager.py  test_schema_linking.py  test_schema_recall_spider2.py  test_skill_bash_tool.py  test_skill_func_tool.py  test_skill_manager.py  test_skill_registry.py
(+756 files in other folders)
